# reservation-ssk

./: .env  README.md  cargo.toml  t_0368781c-4ee2-4c64-833d-8c3ef5e75b1f | postgres | UTF8       | en_US.utf8 | en_US.utf8 | <null>    >
.github/workflows/: build.yml
abi/: Cargo.toml  build.rs
abi/fixtures/: config.yml
abi/protos/: reservation.proto
abi/src/: lib.rs  pager.rs  utils.rs
abi/src/error/: conflict.rs  mod.rs
abi/src/pb/: reservation.rs
abi/src/types/: config.rs  mod.rs  request.rs  reservation.rs  reservation_filter.rs  reservation_query.rs
migrations/: 20221122090705_init.down.sql  20221122090705_init.up.sql  20221122093040_reservation.up.sql  20221122115234_reservation_trigger.down.sql  20221122115234_reservation_trigger.up.sql  20221122115951_reservation_function.up.sql
reservation/: Cargo.toml
reservation/examples/: listen.rs
reservation/src/: error.rs  lib.rs  manager.rs
rfcs/: 0000-core-reservation.md
service/: Cargo.toml
service/src/: lib.rs  main.rs  service.rs  test_utils.rs
service/tests/: service.rs
