[package]
name = "reservation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abi = { version = "0.1.0", path = "../abi" }
async-trait = "0.1.58"
chrono = { version = "0.4.23", features = ["serde"] }
futures = { version = "0.3.25", default-features = false }
sqlx = { version = "0.6.2", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "uuid",
] }
thiserror = "1.0.37"
tokio = { version = "1.22.0", features = ["sync"] }
tokio-stream = "0.1.11"
tracing = "0.1.37"

[dev-dependencies]
dotenvy = "0.15.6"
prost-types = "0.11.2"
sqlx-db-tester = "0.1.1"
tokio = { version = "1.22.0", features = ["full"] }
