[package]
name = "reservation-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abi = { version = "0.1.0", path = "../abi" }
anyhow = "1.0.66"
futures = { version = "0.3.25", default-features = false }

reservation = { version = "0.1.0", path = "../reservation" }
serde = { version = "1.0.148", features = ["derive"] }
serde_yaml = "0.9.14"
shellexpand = "2.1.2"
tokio = { version = "1.22.0", features = ["full"] }
tokio-stream = "0.1.11"
tonic = { version = "0.8.3", features = ["tokio-rustls", "gzip"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

[dev-dependencies]
lazy_static = "1.4.0"
rand = "0.8.5"
sqlx = { version = "0.6.2", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "uuid",
] }
sqlx-db-tester = "0.1.1"
